# flexflow-train

./: .gitignore  .proj.toml  CMakeLists.txt  README.md  flake.nix  rename.sh  run_script.sh  sbatch_test.sh
.github/workflows/: gpu-ci.yml
benchmarking/: benchmark_incr_dec.sh  benchmark_specinfer.sh  debug.sh  get_sharegpt_trace.py  get_wildchat_trace.py  overhead_test.sh  plot_finetuning_overheads.py  plot_req_rate.py  plot_results.ipynb  run_incr_dec.sh  run_req_rate_test.sh  sharegpt.json  test.json  wildchat.json
benchmarking/traces/: sharegpt.json  sharegpt_0.5.json  sharegpt_1.0.json  wildchat.json  wildchat_0.05.json  wildchat_0.06.json  wildchat_0.10.json  wildchat_0.11.json  wildchat_0.12.json  wildchat_0.15.json  wildchat_0.17.json  wildchat_0.20.json  wildchat_0.23.json  wildchat_0.25.json  wildchat_0.28.json  wildchat_3.0.json
benchmarking/yi/: overhead_test.sh  run_incr_dec.sh
cmake/: legion.cmake
conda/: flexflow.yml
config/: config.inc  config.linux
docker/: run-persistent.sh  run.sh
docker/flexflow-environment/: Dockerfile
include/flexflow/: batch_config.h  config.h  ffconst.h  flexflow_c.h  model.h  operator.h  optimizer.h  page_manager.h  request_manager.h
inference/incr_decoding/: incr_decoding.cc
inference/models/: falcon.cc  falcon.h  llama.cc  llama.h  mixtral.cc  mixtral.h  mpt.cc  mpt.h  opt.cc  opt.h  starcoder.cc  starcoder.h
inference/peft/: CMakeLists.txt  overhead_test.cc  peft.cc  peft_bwd_benchmark.cc  peft_fwd_benchmark.cc  peft_throughput.cc  req_rate_benchmark.cc
inference/python/: chat.py  ff_peft.py  incr_decoding.py  spec_infer.py
inference/simplified_infer/: CMakeLists.txt  incr_dec.cc
inference/spec_infer/: spec_infer.cc
inference/suffix_decoding/: CMakeLists.txt  incr_dec.cc  specinfer.cc  suffix_decoding.cc
inference/trace_generator/: trace_generator.cc
inference/utils/: download_peft_model.py  mem_analysis.py
lib/: CMakeLists.txt
lib/runtime-dev/: CMakeLists.txt
python/flexflow/: type.py
rdelacou/: generate_trace.py
src/c/: flexflow_c.cc
src/mapper/: mapper.cc
src/ops/: add_bias_residual_layer_norm.cc  add_bias_residual_layer_norm.cpp  add_bias_residual_layer_norm.cu  aggregate.cc  arg_topk.cu  argmax.cc  argmax.cpp  argmax.cu  beam_topk.cpp  beam_topk.cu  embedding.cc  fused.cc  fused.cpp  fused.cu  group_by.cc  group_by.cu  gumbel_topk.cu  inc_multihead_self_attention.cc  inc_multihead_self_attention.cpp  inc_multihead_self_attention.cu  layer_norm.cc  layer_norm.cpp  layer_norm.cu  linear.cc  lora_linear.cc  lora_linear_params.cc  residual_layer_norm.cc  residual_layer_norm.cpp  residual_layer_norm.cu  residual_rms_norm.cc  rms_norm.cc  (+11 more)
suffix_decoding/: benchmark_incr_dec.sh  benchmark_sd.sh  benchmark_specinfer.sh  benchmark_suffix_tree.sh  debug.sh  sd_debug.sh
tests/: fine_grained_alignment_test.sh  peft_test.sh
wildchat/: benchmark_incr_dec.sh  benchmark_specinfer.sh  get_sharegpt_trace.py  sharegpt.json  wildchat.json
(+137 files in other folders)
